# structural-fuzzing

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
book/: build_book.py  generate_illustrations.py  postprocess_docx.py
book/appendices/: appendix-a-notation.md  appendix-b-software.md  appendix-c-proofs.md
book/output/: _combined.md  _combined_backup.md
book/part1-foundations/: chapter-01-why-geometry.md  chapter-02-mahalanobis-distance.md  chapter-03-hyperbolic-geometry.md  chapter-04-spd-manifolds.md  chapter-05-topological-data-analysis.md
book/part2-algorithms/: chapter-06-pathfinding-on-manifolds.md  chapter-07-equilibrium-on-manifolds.md  chapter-08-pareto-optimization.md  chapter-09-adversarial-robustness.md  chapter-10-adversarial-probing.md
book/part3-patterns/: chapter-11-subset-enumeration.md  chapter-12-compositional-testing.md  chapter-13-group-theoretic-augmentation.md  chapter-14-gradient-reversal.md  chapter-15-cholesky-parameterization.md
book/part4-systems/: chapter-16-geometric-pipelines.md  chapter-17-scaling.md  chapter-18-production-deployment.md  chapter-19-case-study-defect-prediction.md  chapter-20-case-study-bioacoustics.md
examples/defect_prediction/: __init__.py  model.py  run_campaign.py  targets.py
examples/geometric_economics/: __init__.py  model.py  run_campaign.py  targets.py
src/structural_fuzzing/: __init__.py  adversarial.py  baselines.py  compositional.py  core.py  mri.py  pareto.py  pipeline.py  report.py  sensitivity.py
tests/: conftest.py  test_adversarial.py  test_baselines.py  test_compositional.py  test_core.py  test_examples.py  test_mri.py  test_pareto.py  test_pipeline.py  test_sensitivity.py
