[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structural-fuzzing"
version = "0.1.0"
description = "Structural fuzzing framework for parameterized model validation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Andrew H. Bond", email = "andrew.bond@sjsu.edu"},
]
keywords = ["fuzzing", "model-validation", "robustness", "sensitivity-analysis", "mutation-testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
examples = [
    "scikit-learn>=1.3",
    "pandas>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.setuptools.packages.find]
where = ["src"]
